# Glyph

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  ShadC_implementation_plan.md  agent_plan_implementation.md  biome.json  canvas_Plan.md  components.json  index.html  package.json  phased_plan.md  plan.md  pnpm-lock.yaml  tauri_canvas_ai_spec.md  typescript_audit_plan.md  vercel.json  vite.config.ts
docs/: codex-app-server-integration-checklist.md  codex-app-server-troubleshooting.md  github-releases-gumroad-distribution-plan.md  gumroad-licensing-plan.md  licensing.md  macos-unsigned-install.md  release-notes-licensed-binaries.md  release-readiness.md  security.md  shadcn-ui-architecture.md  typescript_audit.md  updater-setup.md
src/: App.css  App.tsx  SettingsApp.tsx  design-tokens.css  main.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/data/: provider_endpoints_support.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  analytics.rs  canvas.rs  cipher_fs.rs  cipher_paths.rs  glyph_fs.rs  glyph_paths.rs  index.rs  io_atomic.rs  lattice_fs.rs  lattice_paths.rs  lib.rs  links.rs  main.rs  net.rs  notes.rs  paths.rs  system_fonts.rs  tether_fs.rs  tether_paths.rs  utils.rs  vault.rs  vault_fs.rs
src-tauri/src/ai/: agent.rs  audit.rs  commands.rs  helpers.rs  history.rs  keychain.rs  local_secrets.rs  mod.rs  models.rs  store.rs  streaming.rs  tools.rs  types.rs
src-tauri/src/ai_codex/: chat.rs  commands.rs  mod.rs  state.rs  transport.rs  types.rs
src-tauri/src/ai_rig/: audit.rs  commands.rs  context.rs  events.rs  helpers.rs  history.rs  local_secrets.rs  mod.rs  models.rs  providers.rs  runtime.rs  state.rs  store.rs  tools.rs  types.rs
src-tauri/src/database/: config.rs  mod.rs  mutations.rs  query.rs  types.rs
src-tauri/src/index/: commands.rs  db.rs  frontmatter.rs  helpers.rs  indexer.rs  links.rs  mod.rs  properties.rs  schema.rs  search_advanced.rs  search_hybrid.rs  tags.rs  types.rs
src-tauri/src/index/tasks/: mod.rs  parse.rs  store.rs  types.rs
src-tauri/src/license/: commands.rs  mod.rs  service.rs  store.rs  types.rs
src-tauri/src/links/: cache.rs  commands.rs  fetch.rs  helpers.rs  mod.rs  types.rs
src-tauri/src/notes/: attachments.rs  commands.rs  frontmatter.rs  helpers.rs  mod.rs  properties.rs  types.rs
src-tauri/src/space/: commands.rs  helpers.rs  mod.rs  state.rs  watcher.rs
src-tauri/src/space_fs/: helpers.rs  link_ops.rs  list.rs  summary.rs  view_data.rs
src-tauri/src/space_fs/read_write/: mod.rs  paths.rs  preview.rs  text.rs  trash.rs
src-tauri/src/vault/: commands.rs  helpers.rs  mod.rs  state.rs  watcher.rs
src-tauri/src/vault_fs/: helpers.rs  link_ops.rs  list.rs  mod.rs  read_write.rs  summary.rs  types.rs  view_data.rs
src-tauri/src/vault_fs/read_write/: paths.rs  preview.rs  text.rs  trash.rs
website/: astro.config.mjs  package.json  (+1 more)
(+411 files in other folders)
