[package]
name = "glyph"
version = "0.1.0"
description = "Glyph"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glyph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
notify = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
url = "2"
futures-util = "0.3"
tokio-util = "0.7"
tokio = { version = "1", features = ["macros", "rt", "time"] }
window-vibrancy = "0.7"
rig-core = { version = "0.24.0", features = ["derive"] }
schemars = "0.8"
tauri-plugin-process = "2"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "20"
